--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,41 @@
 .App {
-  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+}
+.btn {
+  border-radius: 25px;
+  margin: 10px;
+  padding: 15px 35px;
+  border: none;
+  outline: none;
+  background-color: #0092c3;
+  font-size: 3rem;
+  color: #fff;
+}
+.btn-add {
+  border-radius: 25px;
+  margin: 10px;
+  padding: 15px 35px;
+  border: none;
+  outline: none;
+  background-color: blue;
+  font-size: 3rem;
+  color: #fff;
+}
+.btn-take {
+  border-radius: 25px;
+  margin: 10px;
+  padding: 15px 35px;
+  border: none;
+  outline: none;
+  background-color: red;
+  font-size: 3rem;
+  color: #fff;
+}
+.text {
+  font-weight: 300;
+  font-size: 5rem;
 }
