--- a/src/styles.css
+++ b/src/styles.css
@@ -5,15 +5,9 @@
   align-items: center;
   text-align: center;
 }
-.btn {
-  border-radius: 25px;
-  margin: 10px;
-  padding: 15px 35px;
-  border: none;
-  outline: none;
-  background-color: #0092c3;
-  font-size: 3rem;
-  color: #fff;
+.text {
+  font-weight: 300;
+  font-size: 5rem;
 }
 .btn-add {
   border-radius: 25px;
@@ -35,7 +29,13 @@
   font-size: 3rem;
   color: #fff;
 }
-.text {
-  font-weight: 300;
-  font-size: 5rem;
+.reset {
+  border-radius: 25px;
+  margin: 10px;
+  padding: 15px 35px;
+  border: none;
+  outline: none;
+  background-color: #0092c3;
+  font-size: 3rem;
+  color: #fff;
 }
